--- a/02 Mini Desafios/JavaScript/index.html
+++ b/02 Mini Desafios/JavaScript/index.html
@@ -7,6 +7,7 @@
     <title>Ejercicios en Javascript</title>
    
     <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/js/suma.js">
 </head>
 <body>
 
@@ -28,11 +29,7 @@
 
 
 
-
-
-
 <script>
-
 
 
 
