--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
 
         <br><br>
-        <p>La ruta alternativa es: PruebasEnJs, dentro de la rama Master.</p>
+        <p>La ruta alternativa es: Pruebas Portafolio, dentro de la rama Master.</p>
 
     </div>
 
