--- a/Pruebas/Portafolio/index.html
+++ b/Pruebas/Portafolio/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Prueba de JavaScript</title>
+        <title>Portafolio</title>
 
         <!--CSS de Bootstrap 4.2.1-->
         <link
