--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
         </ol>
         <ul>
-            <li><a href="http://carlosrojasi.github.io/Desafio-Latam/Pruebas/Portafolio/index.html"> Prueba Aqui</a></li>
+            <li><a href="http://carlosrojasi.github.io/Desafio-Latam/Pruebas/Portafolio/index.html"> Prueba Portafólio</a></li>
+            <li><a href="http://carlosrojasi.github.io/Desafio-Latam/Pruebas/PruebaPokemon/PokemonPrueba/index.html"> Prueba Pokedex</a></li>
         </ul>
 
         <br><br>
-        <p>La ruta alternativa es: Pruebas Portafolio, dentro de la rama Master.</p>
+        <p>La ruta alternativa es: Prueba Portafolio, dentro de la rama Master.</p>
+        <p>La ruta alternativa es: Prueba Pokedex dentro de la rama Master, pruebapokemon y PokemonPrueba.</p>
 
     </div>
 
