--- a/Pruebas/Pokedex/index.html
+++ b/Pruebas/Pokedex/index.html
@@ -10,15 +10,17 @@
     </head>
     <body class="container">
 
-        <img src="assets/img/pokeapi_256.png" alt="" srcset="">
-        <div class="PokemonTitulo">Búsca a tu Pokémon favorito aquí</div>
-        <div class="input-group mb-3 w-25 m-auto">
-            <input id="input" type="text" class="form-control" placeholder="Ingrese un número" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-outline-primary" type="button" id="button">Buscar</button>
+        <div class="row">
+            <div class="col-md-3">
+                 <img src="assets/img/pokeapi_256.png" alt="" srcset="">
             </div>
-        </div>
+            <div class="col-md-9">
+                <div class="PokemonTitulo">Búsca a tu Pokémon favorito aquí</div>
 
+            </div>
+            
+        </div>
+       
         <div class="pokemonTitulo row">    
             <div class="col-md-3 text-center" id="pokemon" ></div>
              <div class="col-md-6 text-center" id="pokemonTipo">Estadísticas</div>
@@ -36,16 +38,19 @@
         </div>
 
         <div class="row p-4 mx-5 bl-2">
-            <div class="pokemonSeccion col-md-5">
+            <div class="col-md-2"></div>
+            <div class="pokemonSeccion col-md-3">
               <p class="my-0">Tipo</p>
               <p id="pokemonArgu"></p>
             </div>
             <div class="pokemonSeccion1 col-md-2"></div>
-            <div id="pokemonHabil" class="pokemonSeccion col-md-5">
+            <div id="pokemonHabil" class="pokemonSeccion col-md-3">
               <p class="my-0">Debilidad</p>
               <p id="pokemonArgu1"></p>
             </div>
+            <div class="col-md-2"></div>
         </div>
+
 
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
