--- a/05 - Practicas/Pokedex/index.html
+++ b/05 - Practicas/Pokedex/index.html
@@ -3,35 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Poke Prueba</title>
+        <title>No es prueba es practica de pokemon</title>
         <link href="https://fonts.googleapis.com/css2?family=Ranchers&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/estilos.css">
     </head>
-    <body class="container p-2">
+    <body class="container p-3">
 
-    <div class="row p-0">
-        <div class="col-md-4">
+    <div class="row">
         <img src="assets/img/pokeapi_256.png" alt="" srcset="">
-        </div>
-        <div class="PokemonTitulo col-md-8">Búsca a tu Pokémon favorito aquí</div>
-    </div>
-        
+        <div class="PokemonTitulo">PRACTICA de Pokémon favorito</div>
         <div class="input-group mb-3 w-25 m-auto">
             <input id="input" type="text" class="form-control" placeholder="Ingrese un número" aria-label="Recipient's username" aria-describedby="button-addon2">
             <div class="input-group-append">
                 <button class="btn btn-outline-primary" type="button" id="button">Buscar</button>
             </div>
         </div>
+    </div>
 
-<!-- foto y titulo -->
 <div class="pokemonTitulo row">
     <div class="col-md-3 text-center" id="pokemon"></div>
     <div class="col-md-6 text-center" id="pokemonTipo">Estadísticas</div>
     <div class="col-md-3 text-center">Próximo Pokémon</div>
 </div>
 
-<!-- grafico de canvas -->
+
 <div id="prueba" class="align-items-center row p-2">
     <div id="imagen" class="col-md-3"></div>
     <div class="col-md-6" id="chartContainer" style="height: 240px; width: 100%;"></div>
@@ -39,23 +35,30 @@
 </div>
 
 
-<!-- tipo y habilidad -->
-        <div class="row">
+<div class="pokeDatosClase row">
+    <div class="col-md-3 text-center" id="pokeDatos">
+    </div>
+    <div class="col-md-6 text-center" id=" "> </div>
+    <div class="col-md-3 text-center">   </div>
+</div>
 
-            <div class="pokemonSeccion col-md-3">
-                <ul id="talla">  
-                </ul>
-              </div>
-              <div class="col-md-1"></div>
+
+        <div class="row p-4 mx-5 bl-2">
+
+            <div class="col-md-2"></div>
             <div class="pokemonSeccion col-md-3">
               <p class="my-0">Tipo</p>
               <p id="pokemonArgu"></p>
             </div>
-            <div class="col-md-1"></div>
+            <div class="pokemonSeccion1 col-md-2"></div>
+
             <div id="pokemonHabil" class="pokemonSeccion col-md-3">
               <p class="my-0">Debilidad</p>
               <p id="pokemonArgu1"></p>
             </div>
+            <div class="col-md-2"></div>
+
+
         </div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
